charts/all/xrd-dashboard/templates/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: xrd-gateway
  namespace: xrd-dashboard
  labels:
    app: xrd-gateway
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: xrd-gateway-tls
spec:
  selector:
    app: xrd-gateway
  ports:
    - name: oauth
      port: 8443
      targetPort: 8443
      protocol: TCP
    - name: http
      port: 8081
      targetPort: 8081
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: xrd-frontend
  namespace: xrd-dashboard
  labels:
    app: xrd-frontend
spec:
  selector:
    app: xrd-frontend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: xrd-query
  namespace: xrd-dashboard
  labels:
    app: xrd-query
spec:
  selector:
    app: xrd-query
  ports:
    - name: http
      port: 8082
      targetPort: 8082
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: xrd-watch
  namespace: xrd-dashboard
  labels:
    app: xrd-watch
spec:
  selector:
    app: xrd-watch
  ports:
    - name: http
      port: 8083
      targetPort: 8083
      protocol: TCP
